Node-game-deployment-helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # Can be internal or internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'  # Define ports for HTTP/HTTPS
    alb.ingress.kubernetes.io/certificate-arn: your-certificate-arn  # Replace with your ACM certificate ARN
    # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08  # Optional: set SSL policy
    alb.ingress.kubernetes.io/ssl-redirect: "443"  # Force HTTP -> HTTPS redirect
spec:
  ingressClassName: alb  # Use this instead of the deprecated  
  rules:
  - host: backend.domain.com  # Your custom domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
